2006-02-16  Per Bothner  <per@bothner.com>

	* Nodes.java (item): Fix bad recursion.
	Only include if use:org.w3c.dom.Node PreProcess-flag is given.

2006-02-16  Per Bothner  <per@bothner.com>

	* AttributeType.java: Fix tabs/spacing to PreProcess works properly,
	* ElementType.java: Likewise.

2006-02-05  Per Bothner  <per@bothner.com>

	* WriteTo.java (writeToIfChange): New static method and field.
	(ifChanged): New flag.
	(apply2): Use it.

2006-01-11  Per Bothner  <per@bothner.com>

	* HttpPrinter.java: If we see data (including beginGroup) before a
	beginDocumnet, pretend we saw a beginDocument anyway. This makes
	creating servlet output more flexible and easier, since we don't
	have to wrap everything in beginDocument/endDocument.

2006-01-04  Per Bothner  <per@bothner.com>

	* Document.java: No longer extend Procedure1.
	(appl1, apply): Remove methods.
	(makeURL): Remove methods - using URI_utils.resolve.
	(parse): Use generalized XMLParser constructor.
	(parseCached): Handle generauized names.
	* XMLParser.java (<init>): Handle generalized names.

2005-12-31  Per Bothner  <per@bothner.com>

	* KNode.java: Remove TAB in conditional text.
	* KAttr.java: Likewise.
	* KDocument.java: Likewise.

2005-12-10  Per Bothner  <per@bothner.com>

	* Document.java (makeURL): Update because BaseUri.hasScheme
	was moved and renamed to InPort.uriSchemeSpecified.

2005-11-14  thomas kirk  <tk@research.att.com>

	* HttpPrinter.java (endDocument): cclose OutPort.
	* KNode.java (toString): Close OutPort.

2005-11-03  Per Bothner  <per@bothner.com>

	* KNode.java: Implement Consumable.
	(consume): New method.

	* KNode.java (copy): New method, overrides SeqPosition.

2005-10-06  Per Bothner  <per@bothner.com>

	* CommentConstructor.java (numArgs): New method.

	* KText.java (make(String)): New static method.
	* MakeText.java: Extend NodeConstructor.
	(compileToNode): New method.
	(numArgs, apply1): New methods.
	(text$X, text$C): New static methods.
	(apply): Just call text$X.
