@@ -1,3 +1,8 @@
+2006-03-01  Per Bothner  <per@bothner.com>
+
+	* SortNodes.java (compile): Don't canonicalize result, if target
+	is ConsumerTarget or a StackTarget that takes a Values subtype.
+
 2006-02-16  Per Bothner  <per@bothner.com>
 
 	* Nodes.java (item): Fix bad recursion.
